Created and styled Header Component. Added links to future sections and transitions. Removed test and css files.

--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -8,7 +8,8 @@
 
 @mixin reset-anchor {
     text-decoration: none;
-    color: $primary-background-color;
+    cursor: pointer;
+    color: $primary-text-color;
 }
 
 @mixin layout-margin ($side-margin: 1.6rem) {
