Added images for both header and hero. Added fonts for the site. Added Tech Stack. Added Hero section. Styled for mobile view only. Added on click and on hover functionality for menu and logo.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @use "./styles/partials/resets" as *;
 @use "./styles/partials/variables" as *;
+@use './styles/partials/typography' as *;
 
 .App {
-    background-color: $primary-background-color;
+    background-image: linear-gradient(to bottom right, #101010, #262626, #323232, #8e8e8e);
 }
