--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -13,10 +13,15 @@ html {
 
 body {
 	font-size: 1.6rem;
-	font-family: $font-stack;
+	font-family: $font-title;
 	margin: 0;
 	color: $primary-text-color;
 	background-color: $primary-background-color;
+}
+
+p {
+	font-family: $font-stack;
+	color: $secondary-text-color;
 }
 
 a {
