Added an about section to the webpage. Styled it for mobile view. Added images for tech stack and background. Added variablesand resets. Fixed styling for mobile view for hero.

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,5 +3,6 @@
 @use './styles/partials/typography' as *;
 
 .App {
+    width: 100%;
     background-image: linear-gradient(to bottom right, #101010, #262626, #323232, #8e8e8e);
 }
