--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -5,15 +5,13 @@ $font-stack: "Cormorant Garamond";
 //primary colours
 $primary-text-color: #966B28;
 $primary-background-color: #262626;
-$primary-border-color: #BD6F09;
 $primary-hover-color: #E6C068;
 
 //secondary colours
-$secondary-text-color: #ebebeb;
+$secondary-text-color: #ebebeb; 
 $secondary-background-color: #DDDDDD;
-$secondary-border-color: #BD6F09;
 $secondary-hover-color: #F1EAAE;
-$shadow-color: #000000;
+$title-color: #9f843d;
 
 //Responsive breakpoints
 $mobileL-breakpoint: 425px;
