--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -6,28 +6,30 @@
 
 	&__container {
 		@include flex(column);
-		padding-top: 22rem;
-        gap: 6rem;
+		padding-top: 15rem;
+        gap: 5rem;
 	}
 
 	&__info-container {
         @include flex(column);
-        gap: 6rem;
+        gap: 5rem;
         align-items: center;
 	}
 
 	&__logo {
-		width: 50rem;
-		height: 50rem;
+		width: 90vw;
+		height: 90vw;
 	}
 
 	&__text-image-container {
         @include flex(column);
-        gap: 6rem;
-        align-items: center;
+		align-items: center;
+		gap: 5rem;
 
 		@include tablet {
-
+			
+			
+			
 		}
 	}
 
@@ -39,17 +41,18 @@
 	}
 
 	&__title {
-        font-size: 5rem;
-        margin: 4rem 0 3.2rem;
+        font-size: 3.6rem;
+        @include headlines-margin();
 	}
 
 	&__text {
-        font-size: 3.2rem;
+		@include components-margin();
+        font-size: 2rem;
 	}
 
 	&__image-container {
-		width: 51rem;
-		height: 51rem;
+		width: 31rem;
+		height: 31rem;
 		border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
 		background-image: linear-gradient(
 			to bottom right,
@@ -67,8 +70,8 @@
 		position: relative;
 		top: 0.5rem;
 		left: 0.5rem;
-		width: 50rem;
-		height: 50rem;
+		width: 30rem;
+		height: 30rem;
 		border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
 		-webkit-animation: liquidmotion 8s ease-in-out infinite;
 		animation: liquidmotion 8s ease-in-out infinite;
@@ -128,8 +131,7 @@
 	}
 
 	&__tech-stack {
-        width: fit-content;
-        font-size: 3.6rem;
+        font-size: 2.4rem;
         border-bottom: 2px solid $primary-text-color;
         padding-bottom: 1rem;
         margin-bottom: 3rem;
@@ -140,8 +142,11 @@
         @include flex();
         justify-content: center;
         flex-wrap: wrap;
-        width: 60%;
-        gap: 2.5rem;
+        gap: 2rem;
+
+		@include tablet {
+			gap: 2.5rem;
+		}
     }
 
     &__tech-stack-item {
@@ -154,9 +159,17 @@
         border-radius: 50%;
         box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
 
+		@include tablet {
+
+		}
+
         & img {
             height: auto;
-            width: 4.4rem;
+            width: 4.6rem;
+
+			@include tablet {
+
+			}
         }
     }
 }
