Fixed navigation errors in the about page and updated tech stack text.

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -140,6 +140,7 @@
     &__tech-stack-images {
         @include reset-list;
         @include flex();
+		margin-bottom: 12rem;
         justify-content: center;
         flex-wrap: wrap;
         gap: 2rem;
