--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -6,6 +6,7 @@
     @include flex(column);
     gap: 5rem;
     align-items: center;
+    margin-bottom: 12rem;
 
     @include tablet {
         @include flex();
