Footer added to the site with mobile styling. Contact section style was slightly modified.

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -2,61 +2,67 @@
 @use '../../styles/partials/mixins' as *;
 
 .contact {
-    @include layout-margin(2.4rem);
-    @include flex(column);
-    gap: 5rem;
-    margin-bottom: 12rem;
+	@include layout-margin(2.4rem);
+	@include flex(column);
+	gap: 5rem;
+	margin-bottom: 8rem;
 
-    &__title-container {
-        @include flex(column);
-        align-items: center;
-        gap: 2rem;
-    }
+	&__title-container {
+		@include flex(column);
+		align-items: center;
+		gap: 2rem;
+	}
 
-    &__title {
+	&__title {
+		color: $title-color;
+		font-size: 2rem;
+	}
+
+	&__text {
+		text-align: center;
+		font-family: $font-title;
+		font-size: 2.4rem;
+	}
+
+	&__image-container {
+		@include flex();
+		justify-content: center;
+		align-items: center;
+		width: 8.5rem;
+		height: 8.5rem;
+		background-color: $primary-background-color;
+		border-radius: 50%;
+		box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);
+	}
+
+	&__image {
+		font-size: 4rem;
+	}
+
+	&__icons-container {
+		@include flex(column);
+		gap: 5rem;
+	}
+
+	&__info {
+		@include flex(column);
+		align-items: center;
+		gap: 1.8rem;
+	}
+
+	&__info-title {
         color: $title-color;
-        font-size: 2rem;
-    }
+		text-align: center;
+		font-size: 2rem;
+		margin-bottom: 0.5rem;
+	}
 
-    &__text {
-        text-align: center;
-        font-family: $font-title;
-        font-size: 2.4rem;
-    }
-    
-    &__image-container {
-        @include flex();
-        justify-content: center;
-        align-items: center;
-        width: 8.5rem;
-        height: 8.5rem;
-        background-color: $primary-background-color;
-        border-radius: 50%;
-        box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);
-    }
+	&__info-text {
+		font-size: 1.8rem;
 
-    &__image {
-        font-size: 4rem;
-    }
-
-    &__icons-container {
-        @include flex(column);
-        gap: 5rem;
-    }
-
-    &__info {
-        @include flex(column);
-        align-items: center;
-        gap: 1.8rem;
-    }
-
-    &__info-title {
-        text-align: center;
-        font-size: 2rem;
-        margin-bottom: 0.5rem;
-    }
-
-    &__info-text {
-        font-size: 1.8rem;
-    }
+        &:hover {
+			color: $primary-text-color;
+			transition: all 0.3s;
+		}
+	}
 }
