--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,3 +1,38 @@
 @use '../../styles/partials/variables' as *;
 @use '../../styles/partials/mixins' as *;
-@use '../../styles/partials/typography' as *;
+
+.footer {
+    @include flex(column);
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    background-color: $primary-background-color;
+    height: 20vh;
+
+
+    &__info-container {
+        
+    }
+
+    &__info {
+        font-size: 1.6rem;
+    }
+
+    &__link-container {
+        @include flex();
+        gap: 2rem;
+    }
+
+    &__link {
+        transition: all 0.5s;
+        font-size: 2.4rem;
+
+        &:hover {
+			color: $secondary-text-color;
+		}
+
+		&:active {
+			font-size: 2rem;
+		} 
+    }    
+}
