Assets and variables added, unused component deleted, margin and padding changed, fixed navigation spacing.

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -6,7 +6,7 @@
     @include flex(column);
     gap: 5rem;
     align-items: center;
-    margin-bottom: 12rem;
+	padding-top: 10rem;
 
     @include tablet {
         @include flex();
