--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -8,7 +8,8 @@
     gap: 2rem;
     background-color: $primary-background-color;
     height: 20vh;
-
+    padding: 0 2.4rem;
+    margin-top: 10rem;
 
     &__info-container {
         
