--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,7 +15,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    height: 14%;
+    height: 8.6rem;
     z-index: 1;
     overflow: visible;
 
