--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -12,6 +12,7 @@ $secondary-text-color: #ebebeb;
 $secondary-background-color: #DDDDDD;
 $secondary-hover-color: #F1EAAE;
 $title-color: #9f843d;
+$stack-color: #343434;
 
 //Responsive breakpoints
 $mobileL-breakpoint: 425px;
