--- a/src/App.scss
+++ b/src/App.scss
@@ -4,5 +4,5 @@
 
 .App {
     width: 100%;
-    background-image: linear-gradient(to bottom right, #101010, #262626, #323232, #8e8e8e);
+    background-image: linear-gradient(to bottom right, #000000, #101010, #282828, #323232, #404040, #707070, #8e8e8e);
 }
