--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,3 +1,25 @@
 @use '../../styles/partials/variables' as *;
 @use '../../styles/partials/mixins' as *;
-@use '../../styles/partials/typography' as *;
+
+.projects {
+    @include layout-margin(2.4rem);
+	@include flex(column);
+	gap: 5rem;
+	padding-top: 10rem;
+
+    &__title-container {
+        @include flex(column);
+        align-items: center;
+        gap: 2rem;
+    }
+
+    &__title {
+		color: $title-color;
+		font-size: 2rem;
+	}
+
+	&__text {
+		text-align: center;
+		font-size: 2.4rem;
+	}
+}
