--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -15,6 +15,6 @@ $title-color: #9f843d;
 $stack-color: #343434;
 
 //Responsive breakpoints
-$mobileL-breakpoint: 425px;
 $tablet-breakpoint: 768px;
+$laptop-breakpoint: 1024px;
 $desktop-breakpoint: 1280px;
