--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -4,21 +4,37 @@
 .hero {
     @include layout-margin(2.4rem);
 
+	@include tablet {
+		@include layout-margin(9rem);
+	}
+
 	&__container {
 		@include flex(column);
+		align-items: center;
 		padding-top: 15rem;
         gap: 5rem;
+
+		@include desktop {
+			width: 115rem;
+			margin: 0 auto;
+		}
 	}
 
 	&__info-container {
         @include flex(column);
         gap: 5rem;
         align-items: center;
+
 	}
 
 	&__logo {
 		width: 90vw;
 		height: 90vw;
+		
+		@include tablet {
+			width: 50vw;
+			height: 50vw;
+		}
 	}
 
 	&__text-image-container {
@@ -43,11 +59,19 @@
 	&__title {
         font-size: 3.6rem;
         @include headlines-margin();
+
+		@include tablet {
+			font-size: 4.8rem;
+		}
 	}
 
 	&__text {
 		@include components-margin();
         font-size: 2rem;
+
+		@include tablet {
+			font-size: 2.4rem;
+		}
 	}
 
 	&__image-container {
@@ -64,6 +88,11 @@
 		background-size: 100% 100%;
 		-webkit-animation: liquidmotion 8s ease-in-out infinite;
 		animation: liquidmotion 8s ease-in-out infinite;
+
+		@include tablet {
+			width: 41rem;
+			height: 41rem;
+		}
 	}
 
 	&__image {
@@ -76,6 +105,11 @@
 		-webkit-animation: liquidmotion 8s ease-in-out infinite;
 		animation: liquidmotion 8s ease-in-out infinite;
 		transition: all 1s ease-in-out;
+
+		@include tablet {
+			width: 40rem;
+			height: 40rem;
+		}
 	}
 
 	@-webkit-keyframes liquidmotion {
@@ -108,6 +142,8 @@
 
 	&__link-container {
 		@include flex();
+		align-items: center;
+		justify-content: center;
 		gap: 3rem;
 	}
 
@@ -115,13 +151,22 @@
 		transition: all 0.5s;
 		font-size: 6rem;
 
+		@include tablet {
+			font-size: 7rem;
+		}
+
 		&:hover {
 			color: $secondary-text-color;
 		}
 
 		&:active {
-			font-size: 2rem;
+			font-size: 5rem;
+
+			@include tablet {
+				font-size: 6rem;
+			}
 		}
+		
 	}
 
 	&__tech-stack-container {
@@ -135,6 +180,7 @@
         border-bottom: 2px solid $primary-text-color;
         padding-bottom: 1rem;
         margin-bottom: 3rem;
+
 	}
 
     &__tech-stack-images {
