--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -13,6 +13,10 @@
 	padding: 2rem;
 	font-size: 1.8rem;
 
+	@include tablet {
+		gap: 2rem;
+	}
+
     &__image-container {
         width: 100%;
         height: auto;
@@ -40,6 +44,10 @@
 		width: 100%;
 		height: auto;
 		text-align: center;
+
+		@include tablet {
+			gap: 1rem;
+		}
 	}
 
 	&__title {
@@ -53,6 +61,10 @@
         flex-wrap: wrap;
 		gap: 1.2rem;
 		justify-content: center;
+
+		@include tablet {
+			margin-top: 2rem;
+		}
 	}
 
 	&__stack {
@@ -66,6 +78,10 @@
         gap: 1rem;
         justify-content: center;
         align-items: center;
+
+		@include tablet {
+			margin-top: 2rem;
+		}
 
         & a {
             @include flex();
