--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -11,6 +11,12 @@
 		@include layout-margin(9rem);
 	}
 
+	@include desktop {
+		width: 110rem;
+		margin: 0 auto;
+		margin-bottom: 10rem;
+	}
+
 	&__title-container {
 		@include flex(column);
 		align-items: center;
@@ -41,6 +47,11 @@
 
 		@include tablet {
 			@include flex();
+		}
+
+		@include laptop {
+			margin-left: 2rem;
+			gap: 8rem;
 		}
 	}
 
@@ -74,6 +85,10 @@
 			@include flex(column);
 			align-items: flex-start;
 			width: 15rem;
+		}
+
+		@include laptop {
+			width: fit-content;
 		}
 	}
 	
