--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -57,6 +57,10 @@
 		@include reset-list;
 		@include flex();
 		gap: 2rem;
+
+		@include laptop {
+			font-size: 2.8rem;
+		}
 	}
 
 	&__list-item {
@@ -72,7 +76,7 @@
 		}
 
 		&:active {
-			font-size: 2.8rem;
+			font-size: 2.4rem;
 			margin: 0 0.6rem;
 			color: $secondary-hover-color;
 		}
