--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -11,6 +11,12 @@
 		@include layout-margin(9rem);
 	}
 
+	@include desktop {
+		width: 110rem;
+		margin: 0 auto;
+		margin-bottom: 10rem;
+	}
+
     &__title-container {
         @include flex(column);
         align-items: center;
