--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -7,14 +7,16 @@
 
 @font-face {
 	font-family: 'Cormorant Garamond';
-	src: url('../../assets/fonts/CormorantGaramond-LightItalic.ttf') format('truetype');
+	src: url('../../assets/fonts/CormorantGaramond-LightItalic.ttf')
+		format('truetype');
 	font-style: italic;
 	font-weight: 300;
 }
 
 @font-face {
 	font-family: 'Cormorant Garamond';
-	src: url('../../assets/fonts/CormorantGaramond-Regular.ttf') format('truetype');
+	src: url('../../assets/fonts/CormorantGaramond-Regular.ttf')
+		format('truetype');
 	font-style: normal;
 	font-weight: 400;
 }
@@ -35,21 +37,24 @@
 
 @font-face {
 	font-family: 'Cormorant Garamond';
-	src: url('../../assets/fonts/CormorantGaramond-MediumItalic.ttf') format('truetype');
+	src: url('../../assets/fonts/CormorantGaramond-MediumItalic.ttf')
+		format('truetype');
 	font-style: italic;
 	font-weight: 500;
 }
 
 @font-face {
 	font-family: 'Cormorant Garamond';
-	src: url('../../assets/fonts/CormorantGaramond-SemiBold.ttf') format('truetype');
+	src: url('../../assets/fonts/CormorantGaramond-SemiBold.ttf')
+		format('truetype');
 	font-style: normal;
 	font-weight: 600;
 }
 
 @font-face {
 	font-family: 'Cormorant Garamond';
-	src: url('../../assets/fonts/CormorantGaramond-SemiBoldItalic.ttf') format('truetype');
+	src: url('../../assets/fonts/CormorantGaramond-SemiBoldItalic.ttf')
+		format('truetype');
 	font-style: italic;
 	font-weight: 600;
 }
@@ -63,7 +68,8 @@
 
 @font-face {
 	font-family: 'Cormorant Garamond';
-	src: url('../../assets/fonts/CormorantGaramond-BoldItalic.ttf') format('truetype');
+	src: url('../../assets/fonts/CormorantGaramond-BoldItalic.ttf')
+		format('truetype');
 	font-style: italic;
 	font-weight: 700;
 }
